# Cloudmind

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  LICENSE  Makefile  Makefile.new  PROJECT_STRUCTURE.md  README.md  SECURITY.md  UI_IMPROVEMENT_PLAN.md  docker-compose.yml  env.example  pyproject.toml  setup_local.sh  start_cloudmind.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  ci-cd.yml  ci.yml  k6-smoke.yml  link-check.yml  release-drafter.yml  security.yml
backend/: Dockerfile  alembic.ini  pytest.ini  requirements-dev.txt  requirements-ml.txt  requirements.txt  requirements_local.txt
backend/alembic/: env.py
backend/app/: main.py  main_simple.py
backend/config/: __init__.py  base.py  config_dev.py
backend/constants/: __init__.py
backend/requirements/: ai.txt  base.txt  dev.txt
backend/scripts/: validate_env.py
backend/tests/: k6_load_test.js  run_comprehensive_tests.py  test_basic_stress.py  test_chaos.py  test_cost_pipeline_athena.py  test_ensemble_ai.py  test_final_comprehensive.py  test_guardrails.py  test_integration_ai_terminal.py  test_integration_cost_endpoints.py  test_integration_health_metrics.py  test_main.py  test_ml_framework.py  test_ml_optimizer.py  test_pagination.py  test_phase2.py  test_phase3.py  test_phase4.py  test_price_engine.py  test_production_ready.py  test_providers_minimal.py  test_rag_engine.py  test_scanner_pagination.py  test_security.py  test_setup.py  test_stress.py  test_stress_simple.py
backend/utils/: __init__.py  crypto.py  validation.py
docs/: API.md  ARCHITECTURE.md  COMPREHENSIVE_USER_GUIDE.md  README.md
docs/api/: README.md
docs/deployment/: DEPLOYMENT_GUIDE.md  api-keys-setup.md  bulletproof-system.md  production.md
docs/development/: README.md  V0_COMPLETE_FRONTEND_STRUCTURE.md  V0_MASTER_PROMPT.md  V0_MASTER_PROMPT_CONDENSED.md  V0_MASTER_PROMPT_FINAL.md
docs/project/: status.md
docs/user-guides/: API_KEYS_SETUP_GUIDE.md  BULLETPROOF_SYSTEM_GUIDE.md  FREE_STORAGE_ALTERNATIVES.md  README_LOCAL.md  SETUP_GUIDE.md  V0_FRONTEND_STRUCTURE_GUIDE.md  getting-started.md  setup-guide.md
frontend/: Dockerfile  cypress.config.js  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/__tests__/: comprehensive.test.tsx  dashboard.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/public/: manifest.json  offline.html  sw.js
frontend/scripts/: performance-test.js  performance-test.mjs  run-all-tests.js
frontend/utils/: __init__.ts
infrastructure/docker/: docker-compose.prod.yml  security-hardened.yml
infrastructure/helm/: Chart.yaml  values.yaml
infrastructure/k8s/: backend-configmap.yaml  backend-deployment.yaml  backend-ingress.yaml
scripts/: run_all_tests.py  run_quick_tests.py  test_suite.sh  world_class_enhancement.sh
scripts/deploy/: bulletproof_deploy.sh  deploy.sh  deploy_production.sh
scripts/setup/: run_dev.py  (+8 more)
tests/: run_comprehensive_tests.py
(+282 files in other folders)
